--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Fábrica feminista de producción tecnológica</title>
-</head>
-<body>
-<h2>Ya casi!!!</h2>
-</body>
+  </head>
+  <body>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>Fábrica de Nodos</h1>
+        <h2>Fábrica feminista de producción tecnológica</h2>
+        <a href="#video" class="btn">Más info...</a>
+      </div>
+    </section>
+
+    <main>
+            <a id="video"></a>
+            <iframe class="hero" src="https://www.youtube.com/embed/NRR7E3O9y-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
+  </body>
+
 </html>
